# solpsmeta

./: .gitattributes  .gitignore  README.md  ReadME  build_metadata_v2.py  builder.py  modify_solps_files.py  pyproject.toml  test.py
case0/: b2.boundary.parameters  b2.boundary.parameters.stencil~  b2.boundary.parameters~  b2.neutrals.parameters  b2.neutrals.parameters~  b2.numerics.parameters  b2.numerics.parameters.D+C+Ne~  b2.transport.parameters  b2fparam  b2ftrace  b2ftrack  b2mn.dat~  b2plot.ps  dsL  dsLP  dsR  dsRP  dsa  dsi  input.dat~  run.py  runs.py
examples/: backfill_params_from_runname.py  case.py  finalize_legacy_root.py  finalize_legacy_run.py  index_archives_to_sqlite.py  params.json  rewrite_params.py  utils.py
examples/runners/: nearest_from_sqlite.py  run_libe_solps.py  sim_f_solps.py  utils.py
solpsmeta/: __init__.py
solpsmeta.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
solpsmeta/cases/: builder.py
solpsmeta/inputs/: editors.py
solpsmeta/schema/: v2.py
tests/: test_case_builder.py
tools/: _case.py  _run_case.py  case.py  convergence.py  generate_training.py  interpolator.py  modify_inputs_pkl.py  plotter.py  plotter_all_runs.py  solps_iter_simf.py  solps_optML.py  write_sim_input.py
tools/nn/: clean_db.py  nn_learner.py  rf_learner.py  rf_train.py  split_db.py  train.py  utilities.py
tools/nn/dataset_1d/: solps_test.db  solps_train.db
tools/nn/models/: diiid.pt  rf_diiid.pt
tools/processing/: get_array.py  load_data.py
